fix(category page): fixed gaps and margins on desktop layout

--- a/src/pages/category/Category.scss
+++ b/src/pages/category/Category.scss
@@ -40,6 +40,10 @@
             gap: 120px;
             text-align: center;
 
+            @media (min-width: 1024px) {
+                gap: 160px;
+            }
+
             a {
                 text-decoration: none;
                 color: #000;
@@ -82,6 +86,7 @@
                     padding-top: 109px;
                     max-width: 445px;
                     text-align: left;
+                    margin: unset;
                 }
 
                 .items__new {
